# rsrc-rs

./: Cargo.toml  README.md  sample.rsrc
src/: lib.rs
