[package]
name = "rsrc-rs"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Parser for Classic Macintosh resource forks"
homepage = "https://github.com/resistor/rsrc-rs"
repository = "https://github.com/resistor/rsrc-rs"
readme = "README.md"

[dependencies]
bitflags = "2.2.1"
encoding = "0.2.33"
winnow = "0.4.4"
